--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,6 +17,7 @@ html, body{
 main{
     position: relative;
     height: 100vh;
+  
     
 }
 
@@ -49,6 +50,31 @@ iframe#tela{
     top: 80px;
     left: 22px;
     height: 471px;
-    width: 268px;
+    width: 265.7px;
     
+}
+
+section#redes-sociais{
+    text-align: right;
+    position: relative;
+    top: 50px;
+    
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.697);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.26);
+    transition: transform 0.2s, border 0.2s;
+}
+
+
+section#redes-sociais img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 1px  10px rgba(0, 0, 0, 0.633);
+    box-sizing: border-box;
+
 }
